Setup angular basics, and added the angular carousel plugin using their sample.  Nothing custom yet on the carousel, just followed the example.
This commit I created the bare basic of setting up the angular application, with a very simple controller.
Created the empty files for the other controllers and partials that I'll need.

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name:      cf-tri-meetup
-  host:      cf-tri-meetup
+- name:      share-space-science
+  host:      share-space-science
   memory:    64M
   buildpack: https://github.com/cloudfoundry-community/staticfile-buildpack.git
